VR: Don't manipulate incognito tab state for regular tabs.

BUG=824969
R=mthiesse

Change-Id: Ifeb8f82e41ade9bdb10c7649cb7d2a4f1e06851c
Reviewed-on: https://chromium-review.googlesource.com/978659
Reviewed-by: Michael Thiessen <mthiesse@chromium.org>
Commit-Queue: Christopher Grant <cjgrant@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545647}
Former-commit-id: 5d92fe674cc06288bfd844d92f269d237e2ad03e