chrome/browser/android/vr/vr_shell.cc
@@ -556,16 +556,20 @@ void VrShell::OnTabUpdated(JNIEnv* env,
                            jboolean incognito,
                            jint id,
                            jstring jtitle) {
-  incognito_tab_ids_.insert(id);
-  ui_->SetIncognitoTabsOpen(!incognito_tab_ids_.empty());
+  if (incognito) {
+    incognito_tab_ids_.insert(id);
+    ui_->SetIncognitoTabsOpen(!incognito_tab_ids_.empty());
+  }
 }
 
 void VrShell::OnTabRemoved(JNIEnv* env,
                            const JavaParamRef<jobject>& obj,
                            jboolean incognito,
                            jint id) {
-  incognito_tab_ids_.erase(id);
-  ui_->SetIncognitoTabsOpen(!incognito_tab_ids_.empty());
+  if (incognito) {
+    incognito_tab_ids_.erase(id);
+    ui_->SetIncognitoTabsOpen(!incognito_tab_ids_.empty());
+  }
 }
 
 void VrShell::SetAlertDialog(JNIEnv* env,
